@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,9 +21,7 @@ import au.gov.asd.tac.constellation.help.utilities.toc.TOCItem;
 import au.gov.asd.tac.constellation.help.utilities.toc.TreeNode;
 import java.io.File;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -66,7 +64,7 @@ public class Generator implements Runnable {
         // Create TOCFile with the location of the resources file
         // Create the root node for application-wide table of contents
         TOCGenerator.createTOCFile(baseDirectory + tocDirectory);
-        final TreeNode root = new TreeNode(new TOCItem(ROOT_NODE_NAME, ""));
+        final TreeNode<?> root = new TreeNode(new TOCItem(ROOT_NODE_NAME, ""));
         final List<File> tocXMLFiles = getXMLFiles(baseDirectory);
 
         try {
@@ -124,17 +122,16 @@ public class Generator implements Runnable {
             splitUserDir = Arrays.copyOfRange(splitUserDir, 0, splitUserDir.length - 1);
 
             baseDirectory = String.join(sep, splitUserDir) + sep;
-        } catch (final URISyntaxException | MalformedURLException ex) {
+        } catch (final IllegalArgumentException ex) {
             LOGGER.log(Level.SEVERE, "There was a problem retrieving the base directory for launching Offline Help.", ex);
         }
         return baseDirectory;
     }
 
-    protected static String getResource() throws MalformedURLException, URISyntaxException {
+    protected static String getResource() throws IllegalArgumentException {
         final URL sourceLocation = Generator.class.getProtectionDomain().getCodeSource().getLocation();
         final String pathLoc = sourceLocation.getPath();
-        final URL url = new URL(pathLoc);
-        final URI uri = url.toURI();
+        final URI uri = URI.create(pathLoc);
         final Path path = Paths.get(uri);
         final int jarIx = path.toString().lastIndexOf(File.separator);
         final String newPath = jarIx > -1 ? path.toString().substring(0, jarIx) : "";
