@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2022 Australian Signals Directorate
+ * Copyright 2010-2024 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,16 +16,23 @@
 package au.gov.asd.tac.constellation.utilities.rest;
 
 import au.gov.asd.tac.constellation.utilities.datastructure.Tuple;
+import au.gov.asd.tac.constellation.utilities.log.ConnectionLogging;
+import au.gov.asd.tac.constellation.utilities.log.LogPreferences;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import javax.net.ssl.HttpsURLConnection;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.when;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.stubbing.Answer;
 import static org.testng.Assert.*;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.AfterMethod;
@@ -70,7 +77,7 @@ public class RestClientNGTest {
         String url = "https://testurl.tst/testEndpoint";
         List<Tuple<String, String>> params = null;
         URL result = RestClient.generateUrl(url, params);
-        assertEquals(result, new URL(url));
+        assertEquals(result, URI.create(url).toURL());
     }
 
     /**
@@ -83,7 +90,7 @@ public class RestClientNGTest {
         String url = "https://testurl.tst/testEndpoint";
         List<Tuple<String, String>> params = new ArrayList<>();
         URL result = RestClient.generateUrl(url, params);
-        assertEquals(result, new URL(url));
+        assertEquals(result, URI.create(url).toURL());
     }
 
     /**
@@ -96,7 +103,7 @@ public class RestClientNGTest {
         List<Tuple<String, String>> params = new ArrayList<>();
         params.add(new Tuple("", "value"));
         URL result = RestClient.generateUrl(url, params);
-        assertEquals(result, new URL(url));
+        assertEquals(result, URI.create(url).toURL());
     }
 
     /**
@@ -110,7 +117,7 @@ public class RestClientNGTest {
         params.add(new Tuple("param 1", "value1 with spaces"));
         params.add(new Tuple("param+2", "value2+with+plusses"));
         URL result = RestClient.generateUrl(url, params);
-        assertEquals(result, new URL(String.format("%s?param%%201=value1%%20with%%20spaces&param%%2B2=value2%%2Bwith%%2Bplusses", url)));
+        assertEquals(result, URI.create(String.format("%s?param%%201=value1%%20with%%20spaces&param%%2B2=value2%%2Bwith%%2Bplusses", url)).toURL());
     }
 
     /**
@@ -273,6 +280,51 @@ public class RestClientNGTest {
         // checks it can be called
     }
     
+    /**
+     * Test to confirm that the request and response data is sent to 
+     * the Logger when the Connection Logging option has been enabled.
+     * 
+     * @throws java.lang.Exception
+     */
+    @Test
+    public void testConnectionLogging() throws Exception {
+        System.out.println("testConnectionLogging");
+
+        final MockedStatic<LogPreferences> logPrefs = Mockito.mockStatic(LogPreferences.class);
+        logPrefs.when(LogPreferences::isConnectionLoggingEnabled).thenReturn(true);        
+        final MockedStatic<ConnectionLogging> conLoggingStatic = Mockito.mockStatic(ConnectionLogging.class);
+        final ConnectionLogging conLogging = Mockito.mock(ConnectionLogging.class);
+        conLoggingStatic.when(ConnectionLogging::getInstance).thenReturn(conLogging);
+        final StringBuilder outputLog = new StringBuilder();
+        final Answer testAnswer = new Answer(){
+            @Override
+            public Object answer(final InvocationOnMock iom) throws Throwable {
+                outputLog.append(iom.getArgument(1).toString()).append("\n");
+                return null;
+            }            
+        };
+        doAnswer(testAnswer).when(conLogging).log(Mockito.any(), Mockito.anyString(), Mockito.any());
+        
+        final String url = "SAMPLE URL";
+        final List<Tuple<String, String>> params = new ArrayList<>();
+        params.add(new Tuple<>("AAA", "BBB"));
+        params.add(new Tuple<>(null, "CCC"));
+        params.add(new Tuple<>(" ", "DDD"));
+        final String requestBody = "Message Body: Sample Bytes From String";
+        final byte[] requestBytes = requestBody.getBytes();
+        final Map<String, List<String>> headerFields = new HashMap<>();
+        headerFields.put("hdr1", new ArrayList<>());
+        final String responseMessage = "Mocked Response";
+        final RestClientImpl instance = new RestClientImpl(200, responseMessage, headerFields);
+        outputStreamString = new StringBuilder();
+        instance.postWithBytes(url, params, requestBytes);
+
+        // Check that the request body has been sent to the log file
+        assertTrue(outputLog.toString().contains(requestBody));
+        // Check that the response message has been sent to the log file
+        assertTrue(outputLog.toString().contains(responseMessage));
+    }
+        
     /**
      * Implementation of a Rest implementation of a REST client for testing
      * purposes which makes use of Mockito to mock the actual connection.
